objects/ProgramCategory__c.object
<CustomObject>
    <fields>
        <fullName>GeographicBit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This program category is qualified using geographic data.</description>
        <inlineHelpText>This program category is qualified using geographic data.</inlineHelpText>
        <label>Geographic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IE2ProgramID__c</fullName>
        <label>IE2ProgramID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProgramCategoryCode__c</fullName>
        <description>The program category code</description>
        <inlineHelpText>The program category code</inlineHelpText>
        <label>Category Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgramCategoryDescriptionText__c</fullName>
        <description>The description of the program category</description>
        <inlineHelpText>The description of the program category</inlineHelpText>
        <label>Category  Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProgramCategoryEID__c</fullName>
        <description>The Enterprise ID for this Program Category.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Enterprise ID for this Program Category.</inlineHelpText>
        <label>Program Category EID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <description>The program associated with this category</description>
        <inlineHelpText>The program associated with this category</inlineHelpText>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Program Categories</relationshipLabel>
        <relationshipName>ProgramCategories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RankOrder__c</fullName>
        <description>The order of precedence that this category has within its program. Lower number indicates higher precedence. This will determine which category will be chosen to be used for certification if an employee qualifies under multiple categories.</description>
        <inlineHelpText>The order of precedence that this category has within its program. Lower number indicates higher precedence. This will determine which category will be chosen to be used for certification if an employee qualifies under multiple categories.</inlineHelpText>
        <label>RankOrder</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShortName__c</fullName>
        <description>The short name for this program category, for succinct reporting.</description>
        <inlineHelpText>The short name for this program category, for succinct reporting.</inlineHelpText>
        <label>Short Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Program Category</label>
    <listViews>
        <fullName>All</fullName>
        <columns>ProgramCategoryEID__c</columns>
        <columns>Program__c</columns>
        <columns>RankOrder__c</columns>
        <columns>NAME</columns>
        <columns>ProgramCategoryCode__c</columns>
        <columns>ProgramCategoryDescriptionText__c</columns>
        <columns>IE2ProgramID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Program Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Program Categories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>